--- a/app/src/main/res/layout/acticity_login.xml
+++ b/app/src/main/res/layout/acticity_login.xml
@@ -76,14 +76,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:text="아직 계정이 없으신가요?"
-                app:layout_constraintBaseline_toBaselineOf="@+id/signUpButton"
-                app:layout_constraintEnd_toStartOf="@+id/signUpButton"
+                app:layout_constraintBaseline_toBaselineOf="@+id/toSignUpButton"
+                app:layout_constraintEnd_toStartOf="@+id/toSignUpButton"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintHorizontal_chainStyle="packed"
                 app:layout_constraintStart_toStartOf="parent" />
 
             <Button
-                android:id="@+id/signUpButton"
+                android:id="@+id/toSignUpButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="회원가입"
