--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="signUpViewModel"
-            type="com.example.project_2nd_week.login.signup.SignUpViewModel" />
+            type="com.example.shall_we_merge.login.signup.SignUpViewModel" />
 
     </data>
     <LinearLayout
