--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,13 +25,15 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <fragment
+            <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/myNavHostFragment"
-                android:name="androidx.navigation.fragment.NavHostFragment"
+                class = "com.example.shall_we_merge.schedulemanage.ScheduleListFragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:navGraph="@navigation/navigation_main"
-                app:defaultNavHost="true" />
+                app:defaultNavHost="true">
+
+            </androidx.fragment.app.FragmentContainerView>
             <!-- TODO (04) Add a fragment tag for the titleFragment in the LinearLayout
                  Use @+id/titleFragment for the android:id
                  Use com.example.android.navigation.TitleFragment for the android:name
