--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -13,7 +13,7 @@
     <LinearLayout
         android:layout_width="300dp"
         android:layout_height="500dp"
-        android:orientation="vertical">
+        android:orientation="vertical" >
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -97,7 +97,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="10sp"
-                android:visibility="gone"
+                android:visibility="visible"
                 app:layout_constraintEnd_toEndOf="@+id/idEditSignUp"
                 app:layout_constraintTop_toBottomOf="@+id/idEditSignUp"
                 tools:visibility="visible" />
@@ -109,7 +109,7 @@
                 android:text="ID 중복 확인"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="@+id/idEditSignUp"
-                app:layout_constraintTop_toTopOf="@+id/validIdText" />
+                app:layout_constraintTop_toBottomOf="@id/validIdText" />
 
             <TextView
                 android:id="@+id/pwTag"
