--- a/app/src/main/res/layout/list_item_schedule.xml
+++ b/app/src/main/res/layout/list_item_schedule.xml
@@ -9,7 +9,9 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp">
 
 
         <TextView
